--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,7 +25,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "typed.js": "^2.0.15"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.7",
