--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -83,6 +83,13 @@
 			<version>3.12.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.10.0</version>
+		</dependency>
+
+
 		<!--	Swagger 	-->
 		<dependency>
 			<groupId>org.springdoc</groupId>
